Updated Polish translations
(Old svn revision: 22918)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-28  Jean-François Wauthy <pollux@xfce.org>
+
+	* pl.po: Updated Polish translations
+
 2006-08-27  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations
