--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-28  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2006-08-28  Jean-François Wauthy <pollux@xfce.org>
 
 	* pl.po: Updated Polish translations
