--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-29  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Updated Basque translation.
+
 2006-08-28  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation.
