--- a/po/hu.po
+++ b/po/hu.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.8beta2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-26 14:01+0200\n"
-"PO-Revision-Date: 2006-08-26 23:27+0100\n"
-"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2006-09-01 10:52+0100\n"
+"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -781,7 +781,7 @@ msgid ""
 "emails when you click on email addresses."
 msgstr ""
 "Az alapértelmezett Levelező fogja elindítani\n"
-"az email-írást, mikor ráklikkesz egy email-címre."
+"az email-írást egy email-címre kattintáskor."
 
 #.
 #. Utilities
@@ -894,7 +894,7 @@ msgid ""
 "Browser now and click OK to proceed."
 msgstr ""
 "Válassz kedvenc Web böngészőt\n"
-"és kattints az OK-ra."
+"és kattints az OK gombra."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
 msgid ""
@@ -902,7 +902,7 @@ msgid ""
 "now and click OK to proceed."
 msgstr ""
 "Válassz kedvenc Levelezőt\n"
-"és kattints az OK-ra."
+"és kattints az OK gombra."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:288
 msgid ""
@@ -910,7 +910,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "Válassz kedvenc Terminál Emulátort\n"
-"és kattints az OK-ra."
+"és kattints az OK gombra."
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
