2006-09-02	Benedikt Meurer <benny@xfce.org>
	* exo/exo-tree-view.c(exo_tree_view_drag_begin): Fix build with
	  compilers other than gcc. Bug #2252.
	* po/cs.po: Updated czech translations by Michal VÃ¡rady 
	  <miko.vaji@gmail.com>.




(Old svn revision: 22991)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-09-02	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-tree-view.c(exo_tree_view_drag_begin): Fix build with
+	  compilers other than gcc. Bug #2252.
+	* po/cs.po: Updated czech translations by Michal Várady 
+	  <miko.vaji@gmail.com>.
+
 2006-08-27	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-chooser-model.h: Need to include <exo/exo-config.h> to
