--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2006-09-02  Benedikt Meurer <benny@xfce.org>
+
+	* cs.po: Updated czech translations by Michal Várady 
+	  <miko.vaji@gmail.com>.
+
 2006-08-29  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2006-08-28  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
