--- a/po/cs.po
+++ b/po/cs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.8beta2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-26 14:01+0200\n"
-"PO-Revision-Date: 2006-08-26 20:27+0100\n"
+"PO-Revision-Date: 2006-08-29 22:16+0100\n"
 "Last-Translator: Michal Várady <miko.vaji@gmail.com>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -193,7 +193,7 @@ msgstr "Ikony stavů"
 #. EXO_ICON_CHOOSER_CONTEXT_OTHER
 #: ../exo/exo-icon-chooser-dialog.c:107
 msgid "Uncategorized Icons"
-msgstr "Nezařazené položky"
+msgstr "Nezařazené ikony"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ALL
 #: ../exo/exo-icon-chooser-dialog.c:111
@@ -229,7 +229,7 @@ msgstr "Počet sloupců ke zobrazení"
 
 #: ../exo/exo-icon-view.c:674
 msgid "Enable Search"
-msgstr "Zapnout hledání"
+msgstr "Povolit hledání"
 
 #: ../exo/exo-icon-view.c:675
 msgid "View allows user to search through columns interactively"
@@ -245,11 +245,11 @@ msgstr "Šířka použitá pro každou položku"
 
 #: ../exo/exo-icon-view.c:711
 msgid "Layout mode"
-msgstr "Mód rozložení"
+msgstr "Režim rozvržení"
 
 #: ../exo/exo-icon-view.c:712
 msgid "The layout mode"
-msgstr "Mód rozložení"
+msgstr "Režim rozvržení"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Margin"
@@ -257,7 +257,7 @@ msgstr "Okraj"
 
 #: ../exo/exo-icon-view.c:729
 msgid "Space which is inserted at the edges of the icon view"
-msgstr "Prostor vložený na kraje ikonového zobrazení"
+msgstr "Prostor vložený na okraje ikonového zobrazení"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Markup column"
@@ -333,7 +333,7 @@ msgstr "Množství času, po kterém se položka pod kurzorem myši v módu jedn
 
 #: ../exo/exo-icon-view.c:902
 msgid "Spacing"
-msgstr "Odstupy"
+msgstr "Rozestupy"
 
 #: ../exo/exo-icon-view.c:903
 msgid "Space which is inserted between cells of an item"
@@ -495,11 +495,11 @@ msgstr "       %s [volby] --build-list [[název souboru]...]\n"
 
 #: ../exo-csource/main.c:233
 msgid "  -h, --help        Print this help message and exit\n"
-msgstr "  -h, --help        Zobrazí tuto nápovědu\n"
+msgstr "  -h, --help        Zobrazí tuto nápovědu a ukončí se\n"
 
 #: ../exo-csource/main.c:234
 msgid "  -v, --version     Print version information and exit\n"
-msgstr "  -v, --version     Zobrazí informaci o verzi\n"
+msgstr "  -v, --version     Zobrazí informaci o verzi a ukončí se\n"
 
 #: ../exo-csource/main.c:235
 msgid "  --extern          Generate extern symbols\n"
@@ -638,11 +638,11 @@ msgstr "Možnosti:"
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:430
 msgid "Use _startup notification"
-msgstr "Použít oznámení při _startu"
+msgstr "Použít oznámení při _spuštění"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Zvolte tuto možnost pro povolení oznámení při startu, pokud je příkaz spouštěn ze správce souborů nebo z hlavní nabídky. Každá aplikace oznámení při startu nepodporuje."
+msgstr "Zvolte tuto možnost pro povolení oznámení při spuštění, pokud je příkaz spouštěn ze správce souborů nebo z hlavní nabídky. Ne každá aplikace podporuje oznámení při startu ."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -679,19 +679,25 @@ msgstr "Upravit odkaz"
 
 #: ../exo-desktop-item-edit/main.c:72
 msgid "Create a new desktop file in the given directory"
-msgstr "Vytvořit nový soubor plochy v daném adresáři"
+msgstr "Vytvoří nový soubor plochy v daném adresáři"
 
 #: ../exo-desktop-item-edit/main.c:73
 msgid "Type of desktop file to create (Application or Link)"
-msgstr "Typ vytvářeného souboru plochy (aplikace nebo odkaz)"
+msgstr ""
+"Typ vytvářeného souboru plochy\n"
+"                              (aplikace nebo odkaz)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
-msgstr "Přednastavený název při vytváření souboru na ploše"
+msgstr ""
+"Přednastavený název při vytváření souboru na\n"
+"                              ploše"
 
 #: ../exo-desktop-item-edit/main.c:75
 msgid "Preset comment when creating a desktop file"
-msgstr "Přednastavený komentář při vytváření souboru na ploše"
+msgstr ""
+"Přednastavený komentář při vytváření souboru\n"
+"                              na ploše"
 
 #: ../exo-desktop-item-edit/main.c:76
 msgid "Preset command when creating a launcher"
@@ -703,7 +709,9 @@ msgstr "Přednastavená adresa URL při vytváření odkazu"
 
 #: ../exo-desktop-item-edit/main.c:78
 msgid "Preset icon when creating a desktop file"
-msgstr "Přednastavená ikona při vytváření souboru na ploše"
+msgstr ""
+"Přednastavená ikona při vytváření souboru na\n"
+"                              ploše"
 
 #: ../exo-desktop-item-edit/main.c:79
 msgid "Print version information and exit"
@@ -756,7 +764,7 @@ msgstr "Upřednostňované aplikace"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr "Zvolte si výchozí aplikace pro různé služby"
+msgstr "Vyberte si výchozí aplikace pro různé služby"
 
 #.
 #. Internet
@@ -829,7 +837,7 @@ msgstr "Nebyla vybrána žádná aplikace"
 
 #: ../exo-helper/exo-helper-chooser.c:350
 msgid "Failed to set default Web Browser"
-msgstr "Nepodařilo se nastavit výchozí webový prohlížec"
+msgstr "Nepodařilo se nastavit výchozí webový prohlížeč"
 
 #: ../exo-helper/exo-helper-chooser.c:351
 msgid "Failed to set default Mail Reader"
@@ -902,7 +910,7 @@ msgid ""
 "Browser now and click OK to proceed."
 msgstr ""
 "Vyberte si svůj webový prohlížeč\n"
-"a klikněte na OK."
+"a klikněte na tlačítko OK."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
 msgid ""
@@ -910,7 +918,7 @@ msgid ""
 "now and click OK to proceed."
 msgstr ""
 "Vyberte si svůj e-mailový klient\n"
-"a klikněte na OK."
+"a klikněte na tlačítko OK."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:288
 msgid ""
@@ -918,7 +926,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "Vyberte si svůj emulátor terminálu\n"
-"a klikněte na OK."
+"a klikněte na tlačítko OK."
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
@@ -998,7 +1006,7 @@ msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.in.h:1
 msgid "Konqueror Web Browser"
-msgstr "Webová prohlížeč Konqueror"
+msgstr "Webový prohlížeč Konqueror"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
@@ -1070,11 +1078,11 @@ msgstr "       exo-open --launch TYP [PARAMETRY...]"
 
 #: ../exo-open/main.c:46
 msgid "  -h, --help                          Print this help message and exit"
-msgstr "  -h, --help                          Zobrazí tuto nápovědu"
+msgstr "  -h, --help                          Zobrazí tuto nápovědu a ukončí se"
 
 #: ../exo-open/main.c:47
 msgid "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version                       Zobrazí informace o verzi"
+msgstr "  -v, --version                       Zobrazí informace o verzi a ukončí se"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -1084,11 +1092,11 @@ msgid ""
 msgstr ""
 "  --launch TYP [PARAMETRY...]         Spustí upřednostňovanou aplikaci typu\n"
 "                                      TYP s volitelnými PARAMETRY, kde\n"
-"                                      TYP je jedna z následujících hodnot."
+"                                      TYP je jedna hodnot uvedených níže."
 
 #: ../exo-open/main.c:53
 msgid "The following TYPEs are supported for the --launch command:"
-msgstr "Pro příkaz --launch jsou podporovány následující TYPy:"
+msgstr "Při použití přepínače --launch jsou podporovány následující TYPy:"
 
 #. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
@@ -1111,11 +1119,11 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Nezadáte-li volbu --launch, exo-open otevře všechny specifikované URL adresy\n"
-"aplikací, odpovídající tvaru adresy URL. Pokud však zadáte volbu --launch,\n"
+"Nezadáte-li volbu --launch, exo-open otevře všechny specifikované adresy URL\n"
+"aplikací zvolenou podle tvaru adresy URL. Pokud však zadáte volbu --launch,\n"
 "budete moci vybrat, kterou aplikaci chcete spustit a zadat dodatečné parametry\n"
-"pro aplikace (např. pro TerminalEmulator můžete zadat příkaz, který se v nově\n"
-"otevřeném terminálu provede."
+"pro aplikace (např. pro TerminalEmulator můžete zadat příkaz, který se provede\n"
+"v nově otevřeném okně terminálu."
 
 #: ../exo-open/main.c:121
 #, c-format
