2006-09-02	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.1.10rc1 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* exo.spec.in: Add missing files.




(Old svn revision: 23008)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-09-02	Benedikt Meurer <benny@xfce.org>
 
+	* === Released 0.3.1.10rc1 ===
+	* NEWS, configure.in.in: Bump version.
+	* THANKS: Update translator credits.
+	* po/*.po: Update Project-Id-Version.
+	* exo.spec.in: Add missing files.
+
+2006-09-02	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-tree-view.c(exo_tree_view_drag_begin): Fix build with
 	  compilers other than gcc. Bug #2252.
 	* po/cs.po: Updated czech translations by Michal Várady 
