--- a/THANKS
+++ b/THANKS
@@ -16,6 +16,9 @@ Translators (sorted by language):
 ----------------------------------
 These people have translated libexo to foreign languages.
 
+ Carles Muñoz Gorriz <paurullan@bulma.net>
+  * ca translations
+
  Pau Rul·lan Ferragut <paurullan@bulma.net>
   * ca translations
 
@@ -24,6 +27,12 @@ These people have translated libexo to foreign languages.
 
  Benedikt Meurer <benny@xfce.org>
   * de translations
+
+ Fabian Nowak <timystery@arcor.de>
+  * de translations
+
+ Stathis Kamperis <ekamperi@auth.gr>
+  * el translations
 
  Stavros Giannouris <stavrosg2002@freemail.gr>
   * el translations
@@ -43,8 +52,14 @@ These people have translated libexo to foreign languages.
  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
   * fi translations
 
+ Maximilian Schleiss <maxschleiss@bluewin.ch>
+  * fr translations
+
  Stephane Roy <sroy@j2n.net>
   * fr translations
+
+ Leandro Regueiro <leandro.regueiro@gmail.com>
+  * gl translations
 
  Dotan Kamber <kamberd@yahoo.com>
   * he translations
@@ -55,7 +70,16 @@ These people have translated libexo to foreign languages.
  Daichi Kawahata <daichik@users.sourceforge.net>
   * ja translations
 
+ Dimitri Gogelia <delphi.knight@gmail.com>
+  * ka translations
+
+ mantas <mantaz@users.sourceforge.net>
+  * lt translations
+
  Piotr Maliński <admin@rk.edu.pl>
+  * pl translations
+
+ Szymon Kałasz <szymon_maestro@gazeta.pl>
   * pl translations
 
  Adriano Winter Bess <awbess@gmail.com>
