--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2006-09-02  Benedikt Meurer <benny@xfce.org>
 
+	* *.po: Update Project-Id-Version.
+
+2006-09-02  Benedikt Meurer <benny@xfce.org>
+
 	* cs.po: Updated czech translations by Michal Várady 
 	  <miko.vaji@gmail.com>.
 
