--- a/po/de.po
+++ b/po/de.po
@@ -6,9 +6,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.9svn\n"
+"Project-Id-Version: exo 0.3.1.10rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-27 17:53+0200\n"
+"POT-Creation-Date: 2006-09-02 15:53+0200\n"
 "PO-Revision-Date:  2006-08-27 17:42+0200\n"
 "Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
