--- a/po/fi.po
+++ b/po/fi.po
@@ -5,9 +5,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.8beta2\n"
+"Project-Id-Version: exo 0.3.1.10rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-29 00:29+0300\n"
+"POT-Creation-Date: 2006-09-02 15:53+0200\n"
 "PO-Revision-Date: 2006-08-29 00:41+0300\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
