--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-05	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Post-release version bump.
+
 2006-09-02	Benedikt Meurer <benny@xfce.org>
 
 	* === Released 0.3.1.10rc1 ===
