--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-09-10	Benedikt Meurer <benny@xfce.org>
+
+	* exo-open/main.c: Use GOption to parse the command line parameters
+	  and add a --working-directory parameter, which is used when launching
+	  applications via --launch.
+	* po/libexo-0.3.pot, po/*.po: Merge new strings.
+	* po/de.po: Update german translations.
+
 2006-09-05	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
