--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-10  Benedikt Meurer <benny@xfce.org>
+
+	* libexo-0.3.pot, *.po: Merge new strings.
+	* de.po: Update german translations.
+
 2006-09-02  Benedikt Meurer <benny@xfce.org>
 
 	* *.po: Update Project-Id-Version.
