--- a/po/fi.po
+++ b/po/fi.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.10rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-09-10 13:35+0200\n"
-"PO-Revision-Date: 2006-08-29 00:41+0300\n"
+"POT-Creation-Date: 2006-09-12 16:05+0300\n"
+"PO-Revision-Date: 2006-09-12 16:09+0300\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -1060,9 +1060,8 @@ msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "        exo-open --launch TYYPPI [PARAMETRIT...]"
 
 #: ../exo-open/main.c:62
-#, fuzzy
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -h, --help                          Näytä tämä ohjeteksti ja poistu"
+msgstr "  -?, --help                          Näytä tämä ohjeteksti ja poistu"
 
 #: ../exo-open/main.c:63
 msgid ""
@@ -1086,6 +1085,9 @@ msgid ""
 "applications\n"
 "                                      when using the --launch option."
 msgstr ""
+"  --working-directory HAKEMISTO       Sovellusten oletusarvoinen "
+"työhakemisto\n"
+"                                      käytettäessä --launch -valitsinta."
 
 #: ../exo-open/main.c:72
 msgid "The following TYPEs are supported for the --launch command:"
@@ -1112,7 +1114,7 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Jos et määritä --launch -valitsinta, exo-open avaa kaikki valitut URL:t\n"
+"Jos et määritä --launch -valitsinta, exo-open avaa kaikki määritetyt URL:t\n"
 "niiden oletuskäsittelijöillä. Muussa tapauksessa voit valita suoritettavan\n"
 "sovelluksen ja antaa sille lisäparametreja (voit esimerkiksi määrittää\n"
 "päätteessä suoritettavan komentorivin)."
