--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-09-13	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_item_hit_test): Apply patch from
+	  Matt McClinch <mattmcclinch@gmail.com> to improve rubberband
+	  selection in compact list mode.
+
 2006-09-10	Benedikt Meurer <benny@xfce.org>
 
 	* docs/reference/exo-open.xml: Add the --working-directory parameter
