--- a/po/eu.po
+++ b/po/eu.po
@@ -6,16 +6,17 @@
 # Piarres Beobide <pi@beobide.net>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.10rc1\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 13:35+0200\n"
-"PO-Revision-Date: 2006-08-29 09:14+0200\n"
+"PO-Revision-Date: 2006-09-15 22:15+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Pootle 0.10rc3\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:145
@@ -55,8 +56,7 @@ msgstr "Huts  \"%s\" fitxategia irakurtzerakoan: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid ""
-"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
 msgstr ""
 "Huts \"%s\" irudia kargatzerakoan: Errore ezezaguna ziurrenik hondaturiko "
 "irudi fitxategia"
@@ -269,8 +269,7 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:785
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
+msgid "How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:817
@@ -1068,16 +1067,12 @@ msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:62
-#, fuzzy
 msgid "  -?, --help                          Print this help message and exit"
-msgstr ""
-"  -h, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr "  -?, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:63
-msgid ""
-"  -v, --version                       Print version information and exit"
-msgstr ""
-"  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid "  -v, --version                       Print version information and exit"
+msgstr "  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:65
 msgid ""
@@ -1097,6 +1092,9 @@ msgid ""
 "applications\n"
 "                                      when using the --launch option."
 msgstr ""
+"  --working-directory DIREKTORIOA       Lehenetsiriko lan direktorioa "
+"aplikazioentzat\n"
+"                                      -launch aukera erabiltzean."
 
 #: ../exo-open/main.c:72
 msgid "The following TYPEs are supported for the --launch command:"
@@ -1141,14 +1139,3 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
 
-#~ msgid "Select an Icon"
-#~ msgstr "Ikonoa hautatu"
-
-#~ msgid "Default Web Browser"
-#~ msgstr "Lehenetsiriko Web Nabigatzailea"
-
-#~ msgid "Default Mail Reader"
-#~ msgstr "Lehenetsiriko Posta Bezeroa"
-
-#~ msgid "Default Terminal Emulator"
-#~ msgstr "Lehenetsiriko Terminal Emuladorea"
