updated French and Czech translations
(Old svn revision: 23164)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2006-09-17  Jean-François Wauthy <pollux@xfce.org>
+
+	* cs.po: Updated Czech translations
+	* fr.po: Updated French translations
+
 2006-09-15  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2006-09-12  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
