--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.10rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 13:35+0200\n"
-"PO-Revision-Date: 2006-08-19 15:52+0100\n"
+"PO-Revision-Date: 2006-09-12 08:53+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -19,47 +19,46 @@ msgstr ""
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:145
 msgid "Follow state"
-msgstr ""
+msgstr "Suivre l'état"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:139
 #: ../exo/exo-cell-renderer-icon.c:146
 msgid "Render differently based on the selection state."
-msgstr ""
+msgstr "Rendu différent en fonction de l'état de la sélection."
 
 #: ../exo/exo-cell-renderer-icon.c:167
-#, fuzzy
 msgid "Icon"
-msgstr "_Icône :"
+msgstr "Icône"
 
 #: ../exo/exo-cell-renderer-icon.c:168
 msgid "The icon to render."
-msgstr ""
+msgstr "L'icône pour faire le rendu."
 
 #: ../exo/exo-cell-renderer-icon.c:189
 msgid "size"
-msgstr ""
+msgstr "taille"
 
 #: ../exo/exo-cell-renderer-icon.c:190
 msgid "The size of the icon to render in pixels."
-msgstr ""
+msgstr "Taille de l'icône, en pixels, pour faire le rendu."
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:770
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open file \"%s\": %s"
-msgstr "Échec à l'ouverture de \"%s\"."
+msgstr "Échec à l'ouverture du fichier \"%s\" : %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:832
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to read file \"%s\": %s"
-msgstr "Échec à la création de \"%s\"."
+msgstr "Échec à la lecture du fichier \"%s\" : %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid ""
-"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr ""
+msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr "Échec au chargement de l'image \"%s\" : raison inconnue, probablement une image corrompue"
 
-#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:784
+#: ../exo/exo-icon-bar.c:249
+#: ../exo/exo-icon-view.c:784
 msgid "Orientation"
 msgstr "Orientation"
 
@@ -67,19 +66,23 @@ msgstr "Orientation"
 msgid "The orientation of the iconbar"
 msgstr "L'orientation de la barre d'icônes"
 
-#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:801
+#: ../exo/exo-icon-bar.c:266
+#: ../exo/exo-icon-view.c:801
 msgid "Pixbuf column"
 msgstr "Colonne pixbuf"
 
-#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:267
+#: ../exo/exo-icon-view.c:802
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Modèle de colonne utilisé pour obtenir l'icône pixbuf"
 
-#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:928
+#: ../exo/exo-icon-bar.c:282
+#: ../exo/exo-icon-view.c:928
 msgid "Text column"
 msgstr "Colonne texte"
 
-#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:283
+#: ../exo/exo-icon-view.c:929
 msgid "Model column used to retrieve the text from"
 msgstr "Modèle de colonne utilisé pour obtenir le texte"
 
@@ -99,110 +102,111 @@ msgstr "Activer"
 msgid "Active item index"
 msgstr "Activer l'élément indexé"
 
-#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319
+#: ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
 msgstr "Activer la couleur de remplissage de l'élément"
 
-#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326
+#: ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
 msgstr "Activer la couleur du bord de l'élément"
 
-#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333
+#: ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
 msgstr "Activer la couleur du texte de l'élément"
 
-#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340
+#: ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
 msgstr "Couleur de remplissage de l'élément du curseur"
 
-#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347
+#: ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
 msgstr "Couleur du bord de l'élément du curseur"
 
-#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354
+#: ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
 msgstr "Couleur du texte de l'élément du curseur"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ACTIONS
 #: ../exo/exo-icon-chooser-dialog.c:85
-#, fuzzy
 msgid "Action Icons"
-msgstr "Sélectionner une icône"
+msgstr "Icônes des actions"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ANIMATIONS
 #: ../exo/exo-icon-chooser-dialog.c:87
 msgid "Animations"
-msgstr ""
+msgstr "Animations"
 
 #. EXO_ICON_CHOOSER_CONTEXT_APPLICATIONS
 #: ../exo/exo-icon-chooser-dialog.c:89
-#, fuzzy
 msgid "Application Icons"
-msgstr "Bouton pour choisir l'application"
+msgstr "Icônes des applications"
 
 #. EXO_ICON_CHOOSER_CONTEXT_CATEGORIES
 #: ../exo/exo-icon-chooser-dialog.c:91
 msgid "Menu Icons"
-msgstr ""
+msgstr "Icônes du menu"
 
 #. EXO_ICON_CHOOSER_CONTEXT_DEVICES
 #: ../exo/exo-icon-chooser-dialog.c:93
 msgid "Device Icons"
-msgstr ""
+msgstr "Icônes du périphérique"
 
 #. EXO_ICON_CHOOSER_CONTEXT_EMBLEMS
 #: ../exo/exo-icon-chooser-dialog.c:95
 msgid "Emblems"
-msgstr ""
+msgstr "Emblèmes"
 
 #. EXO_ICON_CHOOSER_CONTEXT_EMOTES
 #: ../exo/exo-icon-chooser-dialog.c:97
-#, fuzzy
 msgid "Emoticons"
-msgstr "Pas d'icône"
+msgstr "Emoticons"
 
 #. EXO_ICON_CHOOSER_CONTEXT_INTERNATIONAL
 #: ../exo/exo-icon-chooser-dialog.c:99
 msgid "International Denominations"
-msgstr ""
+msgstr "Dénominations internationales"
 
 #. EXO_ICON_CHOOSER_CONTEXT_MIME_TYPES
 #: ../exo/exo-icon-chooser-dialog.c:101
 msgid "File Type Icons"
-msgstr ""
+msgstr "Icônes des types de fichiers"
 
 #. EXO_ICON_CHOOSER_CONTEXT_PLACES
 #: ../exo/exo-icon-chooser-dialog.c:103
 msgid "Location Icons"
-msgstr ""
+msgstr "Icônes de location"
 
 #. EXO_ICON_CHOOSER_CONTEXT_STATUS
 #: ../exo/exo-icon-chooser-dialog.c:105
-#, fuzzy
 msgid "Status Icons"
-msgstr "Sélectionner une icône"
+msgstr "Icônes de l'état"
 
 #. EXO_ICON_CHOOSER_CONTEXT_OTHER
 #: ../exo/exo-icon-chooser-dialog.c:107
 msgid "Uncategorized Icons"
-msgstr ""
+msgstr "Icônes non classés"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ALL
 #: ../exo/exo-icon-chooser-dialog.c:111
-#, fuzzy
 msgid "All Icons"
-msgstr "Texte pour t_outes les icônes"
+msgstr "Toutes les icônes"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115
+#: ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Fichiers image"
 
 #. setup the header label
 #: ../exo/exo-icon-chooser-dialog.c:205
-#, fuzzy
 msgid "Select _icon from:"
-msgstr "Mode de sélection"
+msgstr "Sélectionner "
 
 #: ../exo/exo-icon-view.c:652
 msgid "Column Spacing"
@@ -226,9 +230,7 @@ msgstr "Activer la recherche"
 
 #: ../exo/exo-icon-view.c:685
 msgid "View allows user to search through columns interactively"
-msgstr ""
-"La vue permet à l'utilisateur de chercher dans les colonnes de manière "
-"interactive"
+msgstr "La vue permet à l'utilisateur de chercher dans les colonnes de manière interactive"
 
 #: ../exo/exo-icon-view.c:702
 msgid "Width for each item"
@@ -260,9 +262,7 @@ msgstr "Colonne balise"
 
 #: ../exo/exo-icon-view.c:756
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr ""
-"Modèle de colonne utilisé pour obtenir le texte si des balises Pango sont "
-"utilisées"
+msgstr "Modèle de colonne utilisé pour obtenir le texte si des balises Pango sont utilisées"
 
 #: ../exo/exo-icon-view.c:770
 msgid "Icon View Model"
@@ -273,11 +273,8 @@ msgid "The model for the icon view"
 msgstr "Le modèle pour la vue d'icônes"
 
 #: ../exo/exo-icon-view.c:785
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
-msgstr ""
-"Comment le texte et l'icône sont positionnés relativement l'un par rapport à "
-"l'autre"
+msgid "How the text and icon of each item are positioned relative to each other"
+msgstr "Comment le texte et l'icône sont positionnés relativement l'un par rapport à l'autre"
 
 #: ../exo/exo-icon-view.c:817
 msgid "Reorderable"
@@ -311,26 +308,25 @@ msgstr "Mode de sélection"
 msgid "The selection mode"
 msgstr "Le mode de sélection"
 
-#: ../exo/exo-icon-view.c:879 ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:879
+#: ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Simple clique"
 
-#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:880
+#: ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
-msgstr ""
-"Si les éléments dans la vue peuvent être activés ou non avec un simple clique"
+msgstr "Si les éléments dans la vue peuvent être activés ou non avec un simple clique"
 
-#: ../exo/exo-icon-view.c:896 ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:896
+#: ../exo/exo-tree-view.c:183
 msgid "Single Click Timeout"
 msgstr "Compte à rebours simple clique"
 
-#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:184
-msgid ""
-"The amount of time after which the item under the mouse cursor will be "
-"selected automatically in single click mode"
-msgstr ""
-"La limite de temps après laquelle l'élément sous le curseur de la souris est "
-"automatiquement sélectionné en mode simple clique"
+#: ../exo/exo-icon-view.c:897
+#: ../exo/exo-tree-view.c:184
+msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
+msgstr "La limite de temps après laquelle l'élément sous le curseur de la souris est automatiquement sélectionné en mode simple clique"
 
 #: ../exo/exo-icon-view.c:912
 msgid "Spacing"
@@ -358,44 +354,40 @@ msgstr "Opacité de la boite de sélection"
 
 #: ../exo/exo-thumbnail-preview.c:123
 msgid "Preview"
-msgstr ""
+msgstr "Prévisualiser"
 
-#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
-#, fuzzy
+#: ../exo/exo-thumbnail-preview.c:139
+#: ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
-msgstr "Aucune application sélectionnée"
+msgstr "Aucun fichier sélectionné"
 
 #: ../exo/exo-thumbnail-preview.c:299
 msgid "Block Device"
-msgstr ""
+msgstr "Périphérique bloc"
 
 #: ../exo/exo-thumbnail-preview.c:304
 msgid "Character Device"
-msgstr ""
+msgstr "Périphérique caractère"
 
 #: ../exo/exo-thumbnail-preview.c:309
 msgid "Folder"
-msgstr ""
+msgstr "Dossier"
 
 #: ../exo/exo-thumbnail-preview.c:314
 msgid "FIFO"
-msgstr ""
+msgstr "FIFO"
 
 #: ../exo/exo-thumbnail-preview.c:319
 msgid "Socket"
-msgstr ""
+msgstr "Socket"
 
 #: ../exo/exo-toolbars-editor-dialog.c:126
 msgid "_Add a new toolbar"
 msgstr "_Ajouter une nouvelle barre d'outils"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid ""
-"Drag an item onto the toolbars above to add it, from the toolbars in the "
-"items table to remove it."
-msgstr ""
-"Glisser un article sur la barre d'outils ci-dessus pour l'ajouter, depuis la "
-"barre d'outils vers la table des articles pour le supprimer."
+msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
+msgstr "Glisser un article sur la barre d'outils ci-dessus pour l'ajouter, depuis la barre d'outils vers la table des articles pour le supprimer."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -522,7 +514,8 @@ msgstr "  --name=identif.   Nom de la variable/macro C\n"
 msgid "  --build-list      Parse (name, file) pairs\n"
 msgstr "  --build-list      Analyser les paires (nom, fichier)\n"
 
-#: ../exo-csource/main.c:248 ../exo-desktop-item-edit/main.c:153
+#: ../exo-csource/main.c:248
+#: ../exo-desktop-item-edit/main.c:153
 #: ../exo-open/main.c:129
 msgid ""
 "Copyright (c) 2005-2006\n"
@@ -537,7 +530,8 @@ msgstr ""
 "Écrit par Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:251 ../exo-desktop-item-edit/main.c:156
+#: ../exo-csource/main.c:251
+#: ../exo-desktop-item-edit/main.c:156
 #: ../exo-open/main.c:132
 #, c-format
 msgid ""
@@ -553,7 +547,8 @@ msgstr ""
 "trouvée dans l'archive de sources %s.\n"
 "\n"
 
-#: ../exo-csource/main.c:255 ../exo-desktop-item-edit/main.c:160
+#: ../exo-csource/main.c:255
+#: ../exo-desktop-item-edit/main.c:160
 #: ../exo-open/main.c:136
 #, c-format
 msgid "Please report bugs to <%s>.\n"
@@ -643,14 +638,8 @@ msgid "Use _startup notification"
 msgstr "Utili_ser la notification de démarrage"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid ""
-"Select this option to enable startup notification when the command is run "
-"from the file manager or the menu. Not every application supports startup "
-"notification."
-msgstr ""
-"Sélectionner cette option pour activer la notification au démarrage lorsque "
-"la commande est exécutée depuis le gestionnaire de fichier ou le menu. La "
-"notification au démarrage n'est pas supportée par toutes les applications."
+msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
+msgstr "Sélectionner cette option pour activer la notification au démarrage lorsque la commande est exécutée depuis le gestionnaire de fichier ou le menu. La notification au démarrage n'est pas supportée par toutes les applications."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -661,13 +650,10 @@ msgstr "Exécuter dans _terminal"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
-msgstr ""
-"Sélectionner cette option pour exécuter la commande dans une fenêtre "
-"terminal."
+msgstr "Sélectionner cette option pour exécuter la commande dans une fenêtre terminal."
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:591
-#, fuzzy
 msgid "Select an icon"
 msgstr "Sélectionner une icône"
 
@@ -827,9 +813,7 @@ msgstr "Échec à l'ouverture le navigateur de la documentation."
 #: ../exo-helper/exo-helper-chooser.c:184
 #: ../exo-helper/exo-helper-chooser.c:191
 msgid "Press left mouse button to change the selected application."
-msgstr ""
-"Presser le bouton gauche de la souris pour changer l'application "
-"sélectionnée."
+msgstr "Presser le bouton gauche de la souris pour changer l'application sélectionnée."
 
 #: ../exo-helper/exo-helper-chooser.c:190
 msgid "Application Chooser Button"
@@ -894,8 +878,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:610
 msgid "Browse the file system to choose a custom command."
-msgstr ""
-"Naviguer sur le système de fichiers pour choisir une commande personnelle."
+msgstr "Naviguer sur le système de fichiers pour choisir une commande personnelle."
 
 #: ../exo-helper/exo-helper-chooser.c:793
 msgid "_Other..."
@@ -954,8 +937,7 @@ msgstr "Applications favorites"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr ""
-"Applications favorites (navigateur Web, messagerie et émulateur de terminal)"
+msgstr "Applications favorites (navigateur Web, messagerie et émulateur de terminal)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
@@ -1086,23 +1068,17 @@ msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch TYPE [PARAMÈTREs...]"
 
 #: ../exo-open/main.c:62
-#, fuzzy
 msgid "  -?, --help                          Print this help message and exit"
-msgstr ""
-"  -h, --help                          Afficher ce message d'aide et quitter"
+msgstr "  -?, --help                          Afficher ce message d'aide et quitter"
 
 #: ../exo-open/main.c:63
-msgid ""
-"  -v, --version                       Print version information and exit"
-msgstr ""
-"  -v, --version                       Afficher les informations de version "
-"et quitter"
+msgid "  -v, --version                       Print version information and exit"
+msgstr "  -v, --version                       Afficher les informations de version et quitter"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, "
-"where\n"
+"                                      TYPE with the optional PARAMETERs, where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYPE [PARAMÈTREs...]       Lancer l'application favorite du TYPE\n"
@@ -1111,10 +1087,11 @@ msgstr ""
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for "
-"applications\n"
+"  --working-directory DIRECTORY       Default working directory for applications\n"
 "                                      when using the --launch option."
 msgstr ""
+"  --working-directory DIRECTORY       Default working directory for applications\n"
+"                                      when using the --launch option."
 
 #: ../exo-open/main.c:72
 msgid "The following TYPEs are supported for the --launch command:"
@@ -1141,10 +1118,8 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Si vous ne spécifiez pas l'option --launch, exo-open ouvrira toutes les "
-"URLs\n"
-"spécifiées avec leur lanceurs d'URL favori. Sinon, si vous spécifiez "
-"l'option\n"
+"Si vous ne spécifiez pas l'option --launch, exo-open ouvrira toutes les URLs\n"
+"spécifiées avec leur lanceurs d'URL favori. Sinon, si vous spécifiez l'option\n"
 "--launch, vous pouvez sélectionner avec quelle application favorite vous\n"
 "voulez exécuter, et passer des paramètres additionnels à cette application\n"
 "(i.e. pour TerminalEmulator vous pouvez passer la ligne de commande qui\n"
@@ -1162,6 +1137,6 @@ msgstr "Échec à l'ouverture de l'URL \"%s\"."
 
 #~ msgid "Select an Icon"
 #~ msgstr "Sélectionner une icône"
-
 #~ msgid "Default Web Browser"
 #~ msgstr "Navigateur Web par défaut"
+
