various translations updates
(Old svn revision: 23198)

--- a/po/pl.po
+++ b/po/pl.po
@@ -1065,10 +1065,9 @@ msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch TYP [PARAMETRY...]"
 
 #: ../exo-open/main.c:62
-#, fuzzy
 msgid "  -?, --help                          Print this help message and exit"
 msgstr ""
-"  -h, --help                          Wyświetl komunikat pomocy i wyjdź"
+"  -?, --help                          Wyświetl komunikat pomocy i wyjdź"
 
 #: ../exo-open/main.c:63
 msgid ""
@@ -1094,6 +1093,9 @@ msgid ""
 "applications\n"
 "                                      when using the --launch option."
 msgstr ""
+"  --working-directory KATALOG       Domyślny katalog roboczy dla "
+"aplikacji\n"
+"                                      przy używaniu opcji --launch."
 
 #: ../exo-open/main.c:72
 msgid "The following TYPEs are supported for the --launch command:"
