--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-02  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* ru.po: Updated Russian translations by Andrey Fedoseev
+	<andrey.fedoseev@gmail.com>
+	
 2006-09-23  Jean-François Wauthy <pollux@xfce.org>
 
 	* pl.po: Updated Polish translations by piotr maliński
