Updated Xarchiver's french translation Fixed some spelling mistakes in libexo's french translation Updated xfcalendar's korean translation by ByungHyun Choi <byunghyun.choi@gmail.com>
(Old svn revision: 23519)

--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.10rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 13:35+0200\n"
-"PO-Revision-Date: 2006-09-12 08:53+0100\n"
+"PO-Revision-Date: 2006-10-22 18:23+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -753,7 +753,7 @@ msgstr "Applications favorites"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr "Sélectionner les applications par défaut pour divers services"
+msgstr "Sélection d'applications par défaut pour divers services"
 
 #.
 #. Internet
@@ -802,8 +802,8 @@ msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"L'Émulateur de Terminal favori qui sera utilisé pour\n"
-"exécuter les commandes qui requiert un environnement\n"
+"L'Émulateur de terminal favori qui sera utilisé pour\n"
+"exécuter les commandes qui requierent un environnement\n"
 "en ligne de commande."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:258
