--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-22  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Fixed spelling mistakes in the French translation.
+
 2006-10-03  Jean-François Wauthy <pollux@xfce.org>
 
 	* it.po: Add Italian translations by Dario <dariolinux@tiscali.it>
