Updated libexo and terminal's french translations, added translators credits to the thunar french translation, fixed a wrong accel. in xfdesktop (thx goes to Mike Massonnet) and fixed some typos in xfwm4's french translation.
(Old svn revision: 23547)

--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.10rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-10 13:35+0200\n"
-"PO-Revision-Date: 2006-10-22 18:23+0100\n"
+"PO-Revision-Date: 2006-10-27 00:49+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -753,7 +753,7 @@ msgstr "Applications favorites"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr "Sélection d'applications par défaut pour divers services"
+msgstr "Sélectionner les applications par défaut"
 
 #.
 #. Internet
@@ -771,20 +771,20 @@ msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"Le navigateur web favori qui sera utilisé pour ouvrir\n"
-"les liens hypertexte et afficher les contenus d'aide."
+"Le navigateur Web favori pour ouvrir les liens\n"
+"hypertexte et afficher les contenus d'aide."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
 msgid "Mail Reader"
-msgstr "Lecteur de Courriels"
+msgstr "Client de messagerie"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"Le lecteur de courriel favori qui sera utilisé pour composer\n"
-"des courriers quand vous cliquez sur une adresse électronique."
+"Le client de messagerie favori pour composer des courriels\n"
+"quand vous cliquez sur une adresse électronique."
 
 #.
 #. Utilities
@@ -802,8 +802,8 @@ msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"L'Émulateur de terminal favori qui sera utilisé pour\n"
-"exécuter les commandes qui requierent un environnement\n"
+"L'émulateur de terminal favori pour exécuter\n"
+"les commandes qui requièrent un environnement\n"
 "en ligne de commande."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:258
@@ -825,15 +825,15 @@ msgstr "Aucune application sélectionnée"
 
 #: ../exo-helper/exo-helper-chooser.c:350
 msgid "Failed to set default Web Browser"
-msgstr "Échec pour affecter le Navigateur Web par défaut"
+msgstr "Échec à l'affectation du navigateur Web par défaut"
 
 #: ../exo-helper/exo-helper-chooser.c:351
 msgid "Failed to set default Mail Reader"
-msgstr "Échec pour affecter le Lecteur de Courriels par défaut"
+msgstr "Échec pour affecter le client de messagerie par défaut"
 
 #: ../exo-helper/exo-helper-chooser.c:352
 msgid "Failed to set default Terminal Emulator"
-msgstr "Échec pour affecter l'Émulateur de Terminal par défaut"
+msgstr "Échec à l'affectation de l'émulateur de terminal par défaut"
 
 #. allocate the chooser
 #: ../exo-helper/exo-helper-chooser.c:422
@@ -842,15 +842,15 @@ msgstr "Sélectionner une application"
 
 #: ../exo-helper/exo-helper-chooser.c:535
 msgid "Choose a custom Web Browser"
-msgstr "Choisir un Navigateur Web personnalisé"
+msgstr "Choisir un navigateur Web personnalisé"
 
 #: ../exo-helper/exo-helper-chooser.c:536
 msgid "Choose a custom Mail Reader"
-msgstr "Choisir un Lecteur de Courriels personnalisé"
+msgstr "Choisir un client de messagerie personnalisé"
 
 #: ../exo-helper/exo-helper-chooser.c:537
 msgid "Choose a custom Terminal Emulator"
-msgstr "Choisir un Émulateur de Terminal personnalisé"
+msgstr "Choisir un émulateur de terminal personnalisé"
 
 #: ../exo-helper/exo-helper-chooser.c:542
 msgid ""
@@ -858,7 +858,7 @@ msgid ""
 "as default Web Browser for Xfce:"
 msgstr ""
 "Spécifiez l'application que vous voulez utiliser\n"
-"comme Navigateur Web par défaut pour Xfce :"
+"comme navigateur Web par défaut pour Xfce :"
 
 #: ../exo-helper/exo-helper-chooser.c:543
 msgid ""
@@ -866,7 +866,7 @@ msgid ""
 "as default Mail Reader for Xfce:"
 msgstr ""
 "Spécifiez l'application que vous voulez utiliser\n"
-"comme Lecteur de Courriels par défaut pour Xfce :"
+"comme client de messagerie par défaut pour Xfce :"
 
 #: ../exo-helper/exo-helper-chooser.c:544
 msgid ""
@@ -874,7 +874,7 @@ msgid ""
 "as default Terminal Emulator for Xfce:"
 msgstr ""
 "Spécifiez l'application que vous voulez utiliser\n"
-"comme Émulateur de Terminal par défaut pour Xfce :"
+"comme émulateur de terminal par défaut pour Xfce :"
 
 #: ../exo-helper/exo-helper-chooser.c:610
 msgid "Browse the file system to choose a custom command."
@@ -897,27 +897,24 @@ msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
-"S'il vous plaît, veuillez choisir votre\n"
-"Navigateur Web favori et cliquer sur\n"
-"OK pour valider."
+"Veuillez choisir votre navigateur Web\n"
+"favori et cliquez sur OK pour valider."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
 msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
-"S'il vous plaît, veuillez choisir votre\n"
-"Lecteur de Courriels favori et cliquer\n"
-"sur OK pour valider."
+"Veuillez choisir votre client de messagerie\n"
+"favori et cliquez sur OK pour valider."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:288
 msgid ""
 "Please choose your preferred Terminal\n"
 "Emulator now and click OK to proceed."
 msgstr ""
-"S'il vous plaît, veuillez choisir votre\n"
-"Émulateur de Terminal favori et cliquer\n"
-"sur OK pour valider."
+"Veuillez choisir votre émulateur de terminal\n"
+"favori et cliquez sur OK pour valider."
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
@@ -937,7 +934,7 @@ msgstr "Applications favorites"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Applications favorites (navigateur Web, messagerie et émulateur de terminal)"
+msgstr "Applications favorites (navigateur Web, client de messagerie et émulateur de terminal)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
@@ -1106,9 +1103,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
-"  WebBrowser       - Le Navigateur Web favori.\n"
-"  MailReader       - Le Lecteur de Courriels favori.\n"
-"  TerminalEmulator - L'Émulateur de terminal favori."
+"  WebBrowser       - Le navigateur Web favori.\n"
+"  MailReader       - Le client de messagerie favori.\n"
+"  TerminalEmulator - L'émulateur de terminal favori."
 
 #: ../exo-open/main.c:82
 msgid ""
