--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-29  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Fixed some spelling mistakes in the French translation.
+
 2006-10-28  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* dz.po: add Dzongkha translation by Dzongkha team
