2006-10-30      Jean-François <pollux@xfce.org>         * configure.in.in, docs/manual/fr,         docs/manual/fr/exo-preferred-applications.xml.in,         docs/manual/fr/images, 	docs/manual/fr/images/exo-preferred-applications-webbrowser-menu.png,         docs/manual/fr/images/exo-preferred-applications-internet.png, 	docs/manual/fr/images/exo-preferred-applications-webbrowser-custom.png,         docs/manual/fr/images/exo-preferred-applications-utilities.png,         docs/manual/fr/images/Makefile.am, docs/manual/fr/Makefile.am,         docs/manual/Makefile.am, po-doc/LINGUAS, po-doc/fr.po,         po-doc/ChangeLog: Add French translations of the manual by 	Maximilian Schleiss. Bug #2478.
(Old svn revision: 23561)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2006-10-30	Jean-François <pollux@xfce.org>
+	* configure.in.in, docs/manual/fr,
+	docs/manual/fr/exo-preferred-applications.xml.in,
+	docs/manual/fr/images,
+	docs/manual/fr/images/exo-preferred-applications-webbrowser-menu.png,
+	docs/manual/fr/images/exo-preferred-applications-internet.png,
+	docs/manual/fr/images/exo-preferred-applications-webbrowser-custom.png,
+	docs/manual/fr/images/exo-preferred-applications-utilities.png,
+	docs/manual/fr/images/Makefile.am, docs/manual/fr/Makefile.am,
+	docs/manual/Makefile.am, po-doc/LINGUAS, po-doc/fr.po,
+	po-doc/ChangeLog: Add French translations of the manual by Maximilian
+	Schleiss. Bug #2478.
+
 2006-09-28	Benedikt Meurer <benny@xfce.org>
 
 	* icons/24x24/, configure.in.in, icons/Makefile.am: Install the
