--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Added French translation and updated LINGUAS.
+
 2006-05-04  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, Makefile.am, exo-preferred-applications.pot, ja.po:
