2006-11-03	Benedikt Meurer <benny@xfce.org>
	* exo/exo-url.c: Underscore is a valid character for usernames.
	  Bug #2453.




(Old svn revision: 23613)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-11-03	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-url.c: Underscore is a valid character for usernames.
+	  Bug #2453.
+
+2006-11-03	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-cell-renderer-icon.c(exo_cell_renderer_icon_render): Handle
 	  internal icons properly. Bug #2488.
 
